Updated about page

--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -90,6 +90,17 @@ time {
   margin-bottom: 8px;
 }
 
+button{
+  padding:10px;
+  margin:10px;
+  background:#A0B6CB;
+  color: black;
+  a{
+    color:black;
+    text-decoration: none;
+  }
+}
+
 
 /* EFFECTS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
