--- a/app/views/resume/index.html.erb
+++ b/app/views/resume/index.html.erb
@@ -95,9 +95,21 @@
             <div class="row">
                 <div class="col-lg-12" id="wp">  
                     <div id="photoWrapper">
-                        <%= image_tag('meryl.jpg', alt: 'photo', class: 'img-circle', height:"250",width:"200", id: 'profile', padding: "0, 20px") %>    
-                    </div> 
-                                                                         
+                        <%= image_tag('profile.jpg', alt: 'photo', class: 'img-circle', width:"200", id: 'profile', padding: "0, 20px") %>    
+                    </div>                                                                          
+                </div>
+                <div id="abouttext">
+                    <h3>Welcome to my page!</h3>
+                     
+                    I am Zeynep Uslu, a recent graduate of information systems engineering from SUNY at Binghamton and Istanbul Techical University. <br>
+                    I am interested in Front-end Web and Android development.<br> My other experineces ranges from desktop application development with Visual Studio(C#, C++), datamining and image processing.
+                    <br>
+                    <br>
+
+                    <h4>Skills</h4>
+                    Java, C#, C++, HTML, CSS, Javascript, Jquery <br> <br>
+                    <h4>Platforms</h4>
+                    Visual Studio, Eclipse, Android SDK
                 </div>
             </div>
         </div>
@@ -156,7 +168,9 @@
                         </li>
                       </ul>
                     </section>
-                    <a href="" class="button" download>Download Resume</a>
+                    <button>
+                        <a href="Uslu.Zeynep.Resume.pdf.pdf" download="Uslu.Zeynep.Resume">Download Resume</a>
+                    </button>
                 </div>
             </div>
         </div>
