--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -65,7 +65,7 @@ body{
 }
 #profile{
   display: inline-block;
-  height: 100%;
+  height: 90%;
   transition: all 0.3s linear;
   -webkit-transition: all 0.3s linear;
   -moz-transition: all 0.3s linear;
@@ -85,6 +85,11 @@ body{
   text-align: center;
   background: #eee;
 }  
+#abouttext{
+  margin-top: 220px;
+  padding:30px;
+  font-size: 16px;
+}
 .services-section {
   height: 200% !important;
 }
