--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -37,7 +37,7 @@ body{
     }
 }
 .showcase {
-  background: url("background1.png") no-repeat center center fixed !important;
+  background: no-repeat center center fixed !important;
   background-attachment: scroll !important;
   background-size:cover;
   height: 100%;
