--- a/app/views/resume/index.html.erb
+++ b/app/views/resume/index.html.erb
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                   <!-- <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>-->
+                  <%= image_tag('background1.png', alt: 'showcase', ) %>
                 </div>
             </div>
         </div>
