Created a new controller called Download for download button

--- a/app/views/resume/index.html.erb
+++ b/app/views/resume/index.html.erb
@@ -169,7 +169,7 @@
                       </ul>
                     </section>
                     <button>
-                        <a href="Uslu.Zeynep.Resume.pdf.pdf" download="Uslu.Zeynep.Resume">Download Resume</a>
+                        <%=link_to 'Download Resume', download_resume_path %>
                     </button>
                 </div>
             </div>
