--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -4,6 +4,5 @@
 <div id="conMes">
 	<h1 class="center">Thank you for yor message.</h1>
 	<p class="center">I will get back to you soon!</p>
-	<%= link_to "Return Home", resume_index_path, id: "contactButton" %>
-
+	<%= link_to "Return Home", root_path, id: "contactButton" %>
 </div>
