--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -36,10 +36,10 @@ body{
         padding-bottom: 15px
     }
 }
-.showcase {
+#showcase {
   background: no-repeat center center fixed !important;
   background-attachment: scroll !important;
-  background-size:cover;
+  background-size:contain;
   height: 100%;
   widht: 100%;
   padding: 30px 0; }
