Updated about section

--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -31,7 +31,7 @@ body {
   position: relative;
   width: 6px;
   margin: 0 auto;
-  padding-top: 50px;/*CONVERT PERCENTAGE*/
+  padding-top: 50px;
   background: #bebebe;/*color of the line*/
 }
 
@@ -50,8 +50,8 @@ body {
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
-  width: 30px;/*CONVERT TO PERCENTAGE*/
-  height: 30px;/*CONVERT TO PERCENTAGE*/
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background: #A0B6CB;
 }
@@ -59,7 +59,7 @@ body {
 .timeline ul li div {/*Timeline Subsection*/
   position: relative;
   bottom: 0;
-  width: 400px;/*CONVERT TO PERCENTAGE*/
+  width: 400px;
   padding: 15px;
   background: #A0B6CB;/*Subsection Color*/
   -webkit-box-shadow: 0 12px 6px -6px #595959;
@@ -79,7 +79,7 @@ body {
 }
 
 .timeline ul li:nth-child(even) div {
-  left: -439px;/*CONVERT TO PERCENTAGE*/
+  left: -439px;
 }
 
 .timeline ul li:nth-child(even) div::before {
@@ -125,11 +125,11 @@ button{
 }
 
 .timeline ul li:nth-child(odd) div {
-  transform: translate3d(200px, 0, 0); /*CONVERT TO PERCENTAGE*/
+  transform: translate3d(200px, 0, 0); 
 }
 
 .timeline ul li:nth-child(even) div {
-  transform: translate3d(-200px, 0, 0); /*CONVERT TO PERCENTAGE*/
+  transform: translate3d(-200px, 0, 0); 
 }
 
 .timeline ul li.in-view div {
