--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -40,9 +40,11 @@ body{
   background: no-repeat center center fixed !important;
   background-attachment: scroll !important;
   background-size:contain;
-  height: 100%;
+  height: 80%;
   widht: 100%;
-  padding: 30px 0; }
+  padding: 5% 0; 
+  margin: 0 auto;
+  }
 
 #wp::after{
   content: '';
