--- a/app/assets/stylesheets/turn.scss
+++ b/app/assets/stylesheets/turn.scss
@@ -139,7 +139,7 @@ a.glow:hover, a.glow:focus
 	opacity: 1;
 }
 .main ul {
-	margin: 100px 0 0 0;
+	margin: 4% 0 0 0;
 	padding: 0;
 	list-style: none;
 	display: block;
