--- a/app/views/resume/index.html.erb
+++ b/app/views/resume/index.html.erb
@@ -187,7 +187,7 @@
                         </li>
                         <li>
                           <div>
-                            <time>2016</time> Established my own company Asitane LLC after graduating from university. 
+                            <time>2016</time> I started working with Asitane LLC after graduating from university. 
                           </div>
                         </li>
                         <li>
